[gd_scene load_steps=4 format=3 uid="uid://b1hahvbm3x1rc"]

[ext_resource type="Script" uid="uid://fxyhjvh4ics4" path="res://actors/ball_actor.gd" id="1_3255x"]
[ext_resource type="Texture2D" uid="uid://cg6cmahb1cvvi" path="res://actors/Pumpkin.png" id="2_3255x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_21b2x"]
radius = 64.0

[node name="BallActor" type="Area2D"]
script = ExtResource("1_3255x")

[node name="BallTexture" type="Sprite2D" parent="."]
modulate = Color(1, 0.5846667, 0.110000014, 1)
position = Vector2(0, -9)
scale = Vector2(0.098, 0.098)
texture = ExtResource("2_3255x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_21b2x")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
rect = Rect2(-67, -67, 134, 134)
enable_node_path = NodePath("../CollisionShape2D")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
